# soltip

./: .dockerignore  .env.docker  .env.docker.example  .gitignore  ARCHITECTURE.md  BUSINESS-ANALYSIS.md  DEPLOYMENT-REQUIREMENTS.md  DEPLOYMENT.md  README.md  SECURITY-AUDIT.md  SOLTIP_COMPLETE.md  STATUS.md  VERSIONS.md  docker-compose.yml
app/: .env.example  .eslintrc.cjs  .prettierrc  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
app/public/: manifest.json
app/src/: App.tsx  main.tsx  vite-env.d.ts
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  rust-toolchain.toml
backend/migrations/: 20260218000000_initial.sql  20260220000000_add_features.sql
backend/src/: config.rs  error.rs  main.rs  models.rs  routes.rs
backend/src/db/: analytics.rs  content_gates.rs  goals.rs  mod.rs  platform.rs  polls.rs  profiles.rs  referrals.rs  splits.rs  subscriptions.rs  tips.rs  vault.rs
backend/src/handlers/: admin.rs  analytics.rs  content_gates.rs  goals.rs  health.rs  mod.rs  polls.rs  profiles.rs  referrals.rs  splits.rs  subscriptions.rs  tips.rs  vault.rs  widget.rs
backend/src/middleware/: mod.rs
backend/src/services/: mod.rs  price.rs  solana.rs  webhook.rs
deployment/: deploy.sh  stop.sh  update.sh
soltip/: Anchor.toml  BUILD_SUCCESS.md  BUILD_VERIFICATION.md  COMPLETION_SUMMARY.md  GENERATE_CODE.md  IMPLEMENTATION.md  QUICK_START.md  package-lock.json  package.json  rust-toolchain.toml
soltip/scripts/: deploy.sh  init_platform.ts
soltip/tests/: soltip.ts
(+232 files in other folders)
